デモの流れを詳しく記載